# DocOps_Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  design.md  docker-compose.yml  docs.html  pyproject.toml  render.yaml  requirements.lock.txt  requirements.txt  start.ps1  stop.ps1  vercel.json
.claude/: settings.local.json
alembic/: env.py
docker/: README.md  entrypoint.sh  nginx.conf  nginx.render.conf  supervisord.conf
docops/: __init__.py  __main__.py  cli.py  config.py  logging.py  observability.py
docs/: README.md  roadmap.md
eval/: __init__.py  benchmark_deep_summary.py  deep_summary_runner.py  runner.py
tests/: test_2a_gate_fail.py  test_api.py  test_benchmark_deep_summary.py  test_calendar_routing.py  test_chroma_ingest.py  test_deep_summary_sorting.py  test_entitlements.py  test_eval.py  test_feature_flags.py  test_flashcards_batch.py  test_flashcards_batch_routing.py  test_flashcards_generation.py  test_flashcards_uniqueness_enforcement.py  test_grounding_pipeline.py  test_improved_coverage.py  test_ingest.py  test_llm_content.py  test_llm_router.py  test_metadata_persistence.py  test_multi_tenancy.py  test_onboarding_api.py  test_outline.py  test_pdf_structure.py  test_phase2.py  test_retriever.py  test_semantic_grounding.py  test_splitter.py  test_structured_splitter.py  test_summarize_pipeline.py  test_summary_routing.py  test_verifier.py
web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  (+2 more)
(+179 files in other folders)
